Corrected a lot of thigs in the recommendation system

--- a/src/notebooks/baseline_alternative_least_squares.ipynb
+++ b/src/notebooks/baseline_alternative_least_squares.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "small_dataset_path = '/Users/alexandros.ferles/Desktop/Personal_Github/Movie_Recommendation_System/Datasets/movieLenSmall'"
+    "small_dataset_path = './../../Datasets/movieLenSmall'"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "'userId,movieId,rating,timestamp'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "[('1', '1', '4.0'), ('1', '3', '4.0'), ('1', '6', '4.0')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "'movieId,title,genres'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        " ('3', 'Grumpier Old Men (1995)')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,23 +278,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For rank 4 the RMSE is 0.8928297291394267\n",
-      "For rank 8 the RMSE is 0.9059377047226924\n",
-      "For rank 12 the RMSE is 0.9084448444275748\n"
+      "For rank 4 the RMSE is 0.9004611692709928\n",
+      "For rank 8 the RMSE is 0.9035024272363643\n",
+      "For rank 12 the RMSE is 0.9068175717565644\n"
      ]
     }
    ],
    "source": [
     "for rank in ranks:\n",
     "    \n",
-    "    model = ALS.train(training_small_ratings, rank, seed=5, iterations=iterations,\n",
+    "    model = ALS.train(training_small_ratings, rank, seed=0, iterations=iterations,\n",
     "                      lambda_=regularization_parameter)\n",
     "    predictions = model.predictAll(validation_small_ratings).map(lambda r: ((r[0], r[1]), r[2]))\n",
     "    rates_and_preds = validation_small_ratings_temp.map(lambda r: ((int(r[0]), int(r[1])), float(r[2]))).join(predictions)\n",
@@ -309,14 +309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The best model was derived from rank:4 with a minimum error of 0.8928297291394267\n"
+      "The best model was derived from rank:4 with a minimum error of 0.9004611692709928\n"
      ]
     }
    ],
@@ -326,18 +326,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[((232, 45208), 1.394593581948382),\n",
-       " ((368, 3272), 2.9663808503649998),\n",
-       " ((610, 52328), 3.8831179512953398)]"
+       "[((232, 45208), 1.4357010972030038),\n",
+       " ((368, 3272), 3.131348041802032),\n",
+       " ((610, 52328), 4.125442899653168)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -374,6 +374,315 @@
    ],
    "source": [
     "print(f'Test set RMSE error: {error}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Making predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading the movies file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_movies_file = os.path.join(small_dataset_path, 'movies.csv')\n",
+    "small_movies = sc.textFile(small_movies_file)\n",
+    "small_movies_header = small_movies.take(1)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_movies_data = small_movies.filter(lambda line: line!=small_movies_header)\\\n",
+    "    .map(lambda line: line.split(\",\")).map(lambda tokens: (int(tokens[0]),tokens[1],tokens[2])).cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_movies_titles = small_movies_data.map(lambda x: (int(x[0]),x[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Toy Story (1995)'),\n",
+       " (2, 'Jumanji (1995)'),\n",
+       " (3, 'Grumpier Old Men (1995)'),\n",
+       " (4, 'Waiting to Exhale (1995)'),\n",
+       " (5, 'Father of the Bride Part II (1995)'),\n",
+       " (6, 'Heat (1995)'),\n",
+       " (7, 'Sabrina (1995)'),\n",
+       " (8, 'Tom and Huck (1995)'),\n",
+       " (9, 'Sudden Death (1995)'),\n",
+       " (10, 'GoldenEye (1995)')]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_movies_titles.take(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def avg(lst):\n",
+    "    \n",
+    "    return sum(lst)/len(lst)\n",
+    "\n",
+    "small_movie_ID_with_ratings_RDD = (small_ratings_data.map(lambda x: (x[1], x[2])).groupByKey()).map(lambda x : (x[0], [float(elem) for elem in list(x[1])]))\n",
+    "small_movie_rating_counts_RDD = small_movie_ID_with_ratings_RDD.map(lambda x: (int(x[0]), (avg(x[1]), len(x[1]))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, (3.9209302325581397, 215))]"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_movie_rating_counts_RDD.take(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a fake user with ID 0 and assign some ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_user_ID = 0\n",
+    "\n",
+    "# The format of each line is (userID, movieID, rating)\n",
+    "new_user_ratings = [\n",
+    "     (0,1,5), # Toy Story (1995)\n",
+    "     (0,2,5), # Jumanji (1995)\n",
+    "     (0,3,2), # Grumpier Old Men (1995)\n",
+    "     (0,4,1), # Waiting to Exhale (1995)\n",
+    "     (0,5,1), # Father of the Bride Part II (1995)\n",
+    "     (0,6,3), # Heat (1995)\n",
+    "     (0,7,1), # Sabrina (1995)\n",
+    "     (0,8,2), # Tom and Huck (1995)\n",
+    "     (0,9,3) , # Sudden Death (1995)\n",
+    "     (0,10,4) # GoldenEye (1995)\n",
+    "    ]\n",
+    "new_user_ratings_RDD = sc.parallelize(new_user_ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complete_data_with_new_ratings_RDD = small_ratings_data.union(new_user_ratings_RDD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model trained in 1.9609730243682861 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import time\n",
+    "\n",
+    "start = time()\n",
+    "\n",
+    "new_ratings_model = ALS.train(complete_data_with_new_ratings_RDD, best_rank, seed=0, \n",
+    "                              iterations=iterations, lambda_=regularization_parameter)\n",
+    "\n",
+    "print(f'Model trained in {time() - start} seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_user_ratings_ids = map(lambda x: x[1], new_user_ratings) # get just movie IDs\n",
+    "# keep just those not on the ID list (thanks Lei Li for spotting the error!)\n",
+    "new_user_unrated_movies_RDD = (small_movies_data.filter(lambda x: x[0] not in new_user_ratings_ids).map(lambda x: (new_user_ID, x[0])))\n",
+    "\n",
+    "# Use the input RDD, new_user_unrated_movies_RDD, with new_ratings_model.predictAll() to predict new ratings for the movies\n",
+    "new_user_recommendations_RDD = new_ratings_model.predictAll(new_user_unrated_movies_RDD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show the extracted recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(69720, ((3.845444347349426, 'Hood of Horror (2006)'), (4.5, 1))),\n",
+       " (3240, ((3.0143997470382344, '\"Big Tease'), (3.25, 2)))]"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_user_recommendations_rating_title_and_count_RDD.take(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(69720, ((3.845444347349426, 'Hood of Horror (2006)'), (4.5, 1))),\n",
+       " (3240, ((3.0143997470382344, '\"Big Tease'), (3.25, 2))),\n",
+       " (98160, ((1.2273797070898143, 'Nature Calls (2012)'), (1.5, 1))),\n",
+       " (1320,\n",
+       "  ((2.8746905379925787, 'Alien³ (a.k.a. Alien 3) (1992)'),\n",
+       "   (3.148936170212766, 47))),\n",
+       " (2040,\n",
+       "  ((3.0644923806019424, '\"Computer Wore Tennis Shoes'),\n",
+       "   (2.857142857142857, 7)))]"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_user_recommendations_rating_RDD = new_user_recommendations_RDD.map(lambda x: (x.product, x.rating))\n",
+    "new_user_recommendations_rating_title_and_count_RDD = \\\n",
+    "    new_user_recommendations_rating_RDD.join(small_movies_titles).join(small_movie_rating_counts_RDD)\n",
+    "new_user_recommendations_rating_title_and_count_RDD.take(5) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_user_recommendations_rating_title_and_count_RDD = \\\n",
+    "    new_user_recommendations_rating_title_and_count_RDD.map(lambda r: (r[1][0][1], r[1][0][0], r[1][1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Take top recommendations with more than 10 reviews:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_movies = new_user_recommendations_rating_title_and_count_RDD.filter(lambda r: r[2][1]>=10).takeOrdered(10, key=lambda x: -x[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------\n",
+      "Spotlight (2015), Rate 4.157894736842105 from 19 users, with predicted review: 4.660183307844523\n",
+      "-----------\n",
+      "\"Hours, Rate 3.7 from 15 users, with predicted review: 4.627460194139214\n",
+      "-----------\n",
+      "His Girl Friday (1940), Rate 4.392857142857143 from 14 users, with predicted review: 4.586486231333916\n",
+      "-----------\n",
+      "Louis C.K.: Live at the Beacon Theater (2011), Rate 4.3 from 10 users, with predicted review: 4.569074157860395\n",
+      "-----------\n",
+      "\"Hunt, Rate 4.3 from 10 users, with predicted review: 4.555907820631949\n",
+      "-----------\n",
+      "Three Colors: Red (Trois couleurs: Rouge) (1994), Rate 4.21875 from 16 users, with predicted review: 4.553413213374373\n",
+      "-----------\n",
+      "The Artist (2011), Rate 4.045454545454546 from 11 users, with predicted review: 4.518346156097071\n",
+      "-----------\n",
+      "Grave of the Fireflies (Hotaru no haka) (1988), Rate 4.15625 from 16 users, with predicted review: 4.515764321252634\n",
+      "-----------\n",
+      "Three Colors: Blue (Trois couleurs: Bleu) (1993), Rate 3.8958333333333335 from 24 users, with predicted review: 4.5125877441539695\n",
+      "-----------\n",
+      "The Lego Movie (2014), Rate 3.870967741935484 from 31 users, with predicted review: 4.465857609239915\n"
+     ]
+    }
+   ],
+   "source": [
+    "for elem in top_movies:\n",
+    "    \n",
+    "    print('-----------')\n",
+    "    print(f'{elem[0]}, Rate {elem[2][0]} from {elem[2][1]} users, with predicted review: {elem[1]}')"
    ]
   },
   {
@@ -404,21 +713,6 @@
     "ratings_data = ratings.filter(lambda line: line!=ratings_header)\\\n",
     "    .map(lambda line: line.split(\",\")).map(lambda tokens: (int(tokens[0]),int(tokens[1]),float(tokens[2]))).cache()\n",
     "movies_titles = ratings_data.map(lambda x: (int(x[0]),x[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_counts_and_averages(ID_and_ratings_tuple):\n",
-    "    nratings = len(ID_and_ratings_tuple[1])\n",
-    "    return ID_and_ratings_tuple[0], (nratings, float(sum(x for x in ID_and_ratings_tuple[1]))/nratings)\n",
-    "\n",
-    "movie_ID_with_ratings_RDD = (ratings_data.map(lambda x: (x[1], x[2])).groupByKey())\n",
-    "movie_ID_with_avg_ratings_RDD = movie_ID_with_ratings_RDD.map(get_counts_and_averages)\n",
-    "movie_rating_counts_RDD = movie_ID_with_avg_ratings_RDD.map(lambda x: (x[0], x[1][0]))"
    ]
   },
   {
