--- a/src/notebooks/baseline_alternative_least_squares.ipynb
+++ b/src/notebooks/baseline_alternative_least_squares.ipynb
@@ -554,7 +554,6 @@
    "outputs": [],
    "source": [
     "new_user_ratings_ids = map(lambda x: x[1], new_user_ratings) # get just movie IDs\n",
-    "# keep just those not on the ID list (thanks Lei Li for spotting the error!)\n",
     "new_user_unrated_movies_RDD = (small_movies_data.filter(lambda x: x[0] not in new_user_ratings_ids).map(lambda x: (new_user_ID, x[0])))\n",
     "\n",
     "# Use the input RDD, new_user_unrated_movies_RDD, with new_ratings_model.predictAll() to predict new ratings for the movies\n",
@@ -634,21 +633,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Take top recommendations with more than 10 reviews:"
+    "Take top recommendations with more than 20 reviews:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_movies = new_user_recommendations_rating_title_and_count_RDD.filter(lambda r: r[2][1]>=10).takeOrdered(10, key=lambda x: -x[1])"
+    "top_movies = new_user_recommendations_rating_title_and_count_RDD.filter(lambda r: r[2][1]>=20).takeOrdered(10, key=lambda x: -x[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -656,25 +655,25 @@
      "output_type": "stream",
      "text": [
       "-----------\n",
-      "Spotlight (2015), Rate 4.157894736842105 from 19 users, with predicted review: 4.660183307844523\n",
-      "-----------\n",
-      "\"Hours, Rate 3.7 from 15 users, with predicted review: 4.627460194139214\n",
-      "-----------\n",
-      "His Girl Friday (1940), Rate 4.392857142857143 from 14 users, with predicted review: 4.586486231333916\n",
-      "-----------\n",
-      "Louis C.K.: Live at the Beacon Theater (2011), Rate 4.3 from 10 users, with predicted review: 4.569074157860395\n",
-      "-----------\n",
-      "\"Hunt, Rate 4.3 from 10 users, with predicted review: 4.555907820631949\n",
-      "-----------\n",
-      "Three Colors: Red (Trois couleurs: Rouge) (1994), Rate 4.21875 from 16 users, with predicted review: 4.553413213374373\n",
-      "-----------\n",
-      "The Artist (2011), Rate 4.045454545454546 from 11 users, with predicted review: 4.518346156097071\n",
-      "-----------\n",
-      "Grave of the Fireflies (Hotaru no haka) (1988), Rate 4.15625 from 16 users, with predicted review: 4.515764321252634\n",
-      "-----------\n",
       "Three Colors: Blue (Trois couleurs: Bleu) (1993), Rate 3.8958333333333335 from 24 users, with predicted review: 4.5125877441539695\n",
       "-----------\n",
-      "The Lego Movie (2014), Rate 3.870967741935484 from 31 users, with predicted review: 4.465857609239915\n"
+      "The Lego Movie (2014), Rate 3.870967741935484 from 31 users, with predicted review: 4.465857609239915\n",
+      "-----------\n",
+      "Moonrise Kingdom (2012), Rate 3.7758620689655173 from 29 users, with predicted review: 4.430650711775922\n",
+      "-----------\n",
+      "\"Philadelphia Story, Rate 4.310344827586207 from 29 users, with predicted review: 4.420493800894658\n",
+      "-----------\n",
+      "Little Big Man (1970), Rate 4.145833333333333 from 24 users, with predicted review: 4.366707043305809\n",
+      "-----------\n",
+      "Thor: Ragnarok (2017), Rate 4.025 from 20 users, with predicted review: 4.358617201286712\n",
+      "-----------\n",
+      "Logan (2017), Rate 4.28 from 25 users, with predicted review: 4.350759028924431\n",
+      "-----------\n",
+      "Dr. Horrible's Sing-Along Blog (2008), Rate 3.9166666666666665 from 24 users, with predicted review: 4.350511012919956\n",
+      "-----------\n",
+      "Dogville (2003), Rate 4.025 from 20 users, with predicted review: 4.339796346544865\n",
+      "-----------\n",
+      "\"Killing Fields, Rate 4.017857142857143 from 28 users, with predicted review: 4.339306846793942\n"
      ]
     }
    ],
@@ -694,44 +693,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_dataset_path = '/Users/alexandros.ferles/Desktop/Personal_Github/Movie_Recommendation_System/Datasets/MovieLensFull'\n",
+    "full_dataset_path = './../../Datasets/MovieLensFull'\n",
     "ratings_path = os.path.join(full_dataset_path, 'ratings.csv')\n",
     "ratings = sc.textFile(name=ratings_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "ratings_header = ratings.take(1)[0]\n",
     "ratings_data = ratings.filter(lambda line: line!=ratings_header)\\\n",
-    "    .map(lambda line: line.split(\",\")).map(lambda tokens: (int(tokens[0]),int(tokens[1]),float(tokens[2]))).cache()\n",
-    "movies_titles = ratings_data.map(lambda x: (int(x[0]),x[1]))"
+    "    .map(lambda line: line.split(\",\")).map(lambda tokens: (int(tokens[0]),int(tokens[1]),float(tokens[2]))).cache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_RDD, test_RDD = ratings_data.randomSplit([7, 3])"
+    "movies_file = os.path.join(full_dataset_path, 'movies.csv')\n",
+    "movies = sc.textFile(small_movies_file)\n",
+    "movies_header = small_movies.take(1)[0]\n",
+    "movies_data = movies.filter(lambda line: line!=movies_header)\\\n",
+    "    .map(lambda line: line.split(\",\")).map(lambda tokens: (int(tokens[0]),tokens[1],tokens[2])).cache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
-    "complete_model = ALS.train(training_RDD, best_rank, seed=5, \n",
-    "                           iterations=iterations, lambda_=regularization_parameter)"
+    "movies_titles = movies_data.map(lambda x: (int(x[0]),x[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_ID_with_ratings_RDD = (ratings_data.map(lambda x: (x[1], x[2])).groupByKey()).map(lambda x : (x[0], [float(elem) for elem in list(x[1])]))\n",
+    "movie_rating_counts_RDD = movie_ID_with_ratings_RDD.map(lambda x: (int(x[0]), (avg(x[1]), len(x[1]))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1449, (3.918377748652978, 6867))]"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_rating_counts_RDD.take(1)"
    ]
   },
   {
@@ -743,14 +774,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_user_ID = 0\n",
+    "full_user_ID = 0\n",
     "\n",
     "# The format of each line is (userID, movieID, rating)\n",
-    "new_user_ratings = [\n",
+    "full_new_user_ratings = [\n",
     "     (0,260,4), # Star Wars (1977)\n",
     "     (0,1,3), # Toy Story (1995)\n",
     "     (0,16,3), # Casino (1995)\n",
@@ -762,73 +793,67 @@
     "     (0,858,5) , # Godfather, The (1972)\n",
     "     (0,50,4) # Usual Suspects, The (1995)\n",
     "    ]\n",
-    "new_user_ratings_RDD = sc.parallelize(new_user_ratings)"
+    "full_new_user_ratings_RDD = sc.parallelize(full_new_user_ratings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 201,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 260, 4),\n",
-       " (0, 1, 3),\n",
-       " (0, 16, 3),\n",
-       " (0, 25, 4),\n",
-       " (0, 32, 4),\n",
-       " (0, 335, 1),\n",
-       " (0, 379, 1),\n",
-       " (0, 296, 3),\n",
-       " (0, 858, 5),\n",
-       " (0, 50, 4)]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "new_user_ratings_RDD.collect()"
+    "complete_ratings = ratings_data.union(full_new_user_ratings_RDD)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Merge with the old ratings:"
+    "#### Full model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
-    "complete_ratings = ratings_data.union(new_user_ratings_RDD)"
+    "training_RDD, test_RDD = complete_ratings.randomSplit([7, 3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 203,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full model trained in 54.59347486495972 seconds\n"
+     ]
+    }
+   ],
    "source": [
-    "full_model = ALS.train(complete_ratings, best_rank, seed=5, \n",
-    "                              iterations=iterations, lambda_=regularization_parameter)"
+    "start = time()\n",
+    "\n",
+    "full_model = ALS.train(training_RDD, best_rank, seed=0, \n",
+    "                              iterations=iterations, lambda_=regularization_parameter)\n",
+    "\n",
+    "print(f'Full model trained in {time() - start} seconds')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_user_ratings_ids = map(lambda x: x[1], new_user_ratings) # get just movie IDs\n",
-    "new_user_unrated_movies_RDD = (complete_ratings.filter(lambda x: x[0] not in new_user_ratings_ids).map(lambda x: (new_user_ID, x[0])))\n",
-    "new_user_recommendations_RDD = full_model.predictAll(new_user_unrated_movies_RDD)"
+    "full_user_ratings_ids = map(lambda x: x[1], full_new_user_ratings) # get just movie IDs\n",
+    "full_user_unrated_movies_RDD = (movies_data.filter(lambda x: x[0] not in full_user_ratings_ids).map(lambda x: (full_user_ID, x[0])))\n",
+    "\n",
+    "# Use the input RDD, new_user_unrated_movies_RDD, with new_ratings_model.predictAll() to predict new ratings for the movies\n",
+    "full_user_recommendations_RDD = full_model.predictAll(full_user_unrated_movies_RDD)"
    ]
   },
   {
@@ -837,18 +862,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_user_recommendations_rating_RDD = new_user_recommendations_RDD.map(lambda x: (x.product, x.rating))\n",
+    "full_user_recommendations_rating_RDD = full_user_recommendations_RDD.map(lambda x: (x.product, x.rating))\n",
+    "full_user_recommendations_rating_title_and_count_RDD = \\\n",
+    "    full_user_recommendations_rating_RDD.join(small_movies_titles).join(movie_rating_counts_RDD)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "new_user_recommendations_rating_title_and_count_RDD = \\\n",
-    "    new_user_recommendations_rating_RDD.join(movies_titles).join(movie_rating_counts_RDD)\n",
-    "new_user_recommendations_rating_title_and_count_RDD.take(3)"
+    "    new_user_recommendations_rating_title_and_count_RDD.map(lambda r: (r[1][0][1], r[1][0][0], r[1][1]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
