Netlix finished all

--- a/src/notebooks/Netflix_alternate_least_squares.ipynb
+++ b/src/notebooks/Netflix_alternate_least_squares.ipynb
@@ -936,22 +936,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ALS.train(training_small_ratings, best_rank, seed=5, iterations=iterations,\n",
+    "model = ALS.train(training_set, best_rank, seed=5, iterations=iterations,\n",
     "                  lambda_=best_regularization)\n",
-    "test_set_predictions = model.predictAll(test_set_to_predict).map(lambda r: ((elem[0], elem[1]), elem[2]))\n",
-    "test_set_true_and_predicted_rates = test_set.map(lambda elem: ((int(elem[0]), int(elem[1])), float(elem[2]))).join(test_set_predictions)\n",
-    "test_set_error = math.sqrt(rates_and_preds.map(lambda r: (r[1][0] - r[1][1])**2).mean())"
+    "test_set_predictions = model.predictAll(test_set_to_predict).map(lambda elem: ((elem[0], elem[1]), elem[2]))\n",
+    "test_set_true_and_predicted_rates = test_set.map(lambda elem: ((int(elem[0]), int(elem[1])), float(elem[2]))).join(test_set_predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "test_set_error = math.sqrt(test_set_true_and_predicted_rates.map(lambda r: (r[1][0] - r[1][1])**2).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set RMSE performance: 0.8419420411595426\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'Test set RMSE performance: {test_set_error}')"
    ]
@@ -965,25 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mREADME.md\u001b[m\u001b[m           \u001b[31mcombined_data_2.txt\u001b[m\u001b[m \u001b[31mcombined_data_4.txt\u001b[m\u001b[m \u001b[31mprobe.txt\u001b[m\u001b[m\r\n",
-      "\u001b[31mcombined_data_1.txt\u001b[m\u001b[m \u001b[31mcombined_data_3.txt\u001b[m\u001b[m \u001b[31mmovie_titles.csv\u001b[m\u001b[m    \u001b[31mqualifying.txt\u001b[m\u001b[m\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls ../../Datasets/Netflix-prize-data/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +991,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_titles = movies.map(lambda x: (int(x[0]),x[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1013,7 @@
        " '5,2004,The Rise and Fall of ECW']"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1053,7 @@
        " ['5', 'The Rise and Fall of ECW', '2004']]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1101,7 @@
        "17770"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,16 +1112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(4914, <pyspark.resultiterable.ResultIterable at 0x111ab9cc0>)]"
+       "[(4914, <pyspark.resultiterable.ResultIterable at 0x7f8b64fa6be0>)]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,10 +1141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 63,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2146,7 +2151,7 @@
        "   ...])]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2164,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2173,7 +2178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2186,7 +2191,7 @@
        " (9954, (3.938280235693598, 10013))]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3250,35 +3255,369 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "fake_user_id = 0\n",
     "\n",
-    "fake_user_ratings= [\n",
-    "    \"['13',\n",
-    "  'Lord of the Rings: The Return of the King: Extended Edition: Bonus Material',\n",
-    "  '2003'],\"\n",
-    "\" ['175', 'Reservoir Dogs', '1992'],\n",
-    "\"\n",
-    "]\n",
+    "fake_use_ratings = [\n",
+    "     (0,13,4), # Lord of the Rings: The Return of the King: Extended Edition: Bonus Material (2003)\n",
+    "     (0,175,3), # Reservoir Dogs (1992)\n",
+    "     (0,189,4), # Airplane II: The Sequel (1982)\n",
+    "     (0,263,2), # 'Dragon Ball: Tournament Saga (2001)\n",
+    "     (0,273,3), # Taxi (2004)\n",
+    "     (0,299,4), # Bridget Jones's Diary (2004)\n",
+    "     (0,290,1), # Harold and Kumar Go to White Castle (2004)\n",
+    "     (0,316,5), # Futurama: Monster Robot Maniac Fun Collection (1999)\n",
+    "     (0,457,5) , # Kill Bill (2003)\n",
+    "     (0,50,2) # The Matrix: Revolutions, The (2003)\n",
+    "    ]\n",
     "\n",
-    " ['189', 'Airplane II: The Sequel', '1982'],\n",
-    " ['199', 'The Deer Hunter', '1978'],\n",
-    " ['252', 'Stuart Little 2', '2002'],\n",
-    " ['263', 'Dragon Ball: Tournament Saga', '2001'],\n",
-    " ['273', 'Taxi', '2004'],\n",
-    " ['290', 'Harold and Kumar Go to White Castle', '2004'],\n",
-    " ['299', \"Bridget Jones's Diary\", '2001'],\n",
-    " ['316', 'Futurama: Monster Robot Maniac Fun Collection', '1999'],\n",
-    " ['362', 'The Flintstones in Viva Rock Vegas', '2000'],\n",
-    " ['457', 'Kill Bill: Vol. 2', '2004'],\n",
-    " ['468', 'The Matrix: Revolutions', '2003'],\n",
-    "\n",
-    "\n",
-    "fake_user_rdd = "
+    "full_fake_user_ratings_RDD = sc.parallelize(fake_use_ratings)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, 30, 3)]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_rdd.take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complete_ratings = final_rdd.union(full_fake_user_ratings_RDD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, 30, 3)]"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complete_ratings.take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_RDD, test_RDD = complete_ratings.randomSplit([7, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full model trained in 478.4725694656372 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time()\n",
+    "\n",
+    "full_model = ALS.train(training_RDD, best_rank, seed=5, \n",
+    "                              iterations=iterations, lambda_=best_regularization)\n",
+    "\n",
+    "print(f'Full model trained in {time() - start} seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_user_ratings_ids = map(lambda x: x[1], fake_use_ratings) # get just movie IDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['1', 'Dinosaur Planet', '2003']]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 13, 4)]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_fake_user_ratings_RDD.take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_user_unrated_movies_RDD = (movies.filter(lambda x: int(x[0]) not in fake_use_ratings).map(lambda x: (fake_user_id, int(x[0]))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 1)]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_user_unrated_movies_RDD.take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_user_recommendations_RDD = full_model.predictAll(full_user_unrated_movies_RDD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Rating(user=0, product=6402, rating=2.305024824285473)]"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_user_recommendations_RDD.take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_user_recommendations_rating_RDD = full_user_recommendations_RDD.map(lambda x: (x.product, x.rating))\n",
+    "full_user_recommendations_rating_title_and_count_RDD = \\\n",
+    "    full_user_recommendations_rating_RDD.join(movie_titles).join(movie_and_ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(16170, ((1.8009097307422466, 'Munchies'), (2.7088607594936707, 158))),\n",
+       " (6370,\n",
+       "  ((2.2561160426653326, 'Joseph: King of Dreams'),\n",
+       "   (3.7247107683180065, 3371))),\n",
+       " (12740,\n",
+       "  ((1.5729453846687824, 'Tales of the Kama Sutra 2: Monsoon'),\n",
+       "   (1.8241042345276872, 307))),\n",
+       " (2940, ((3.2338604060818046, 'Existenz'), (3.052781253554772, 8791))),\n",
+       " (9310, ((2.599180185501897, 'The Candidate'), (3.5441849816849818, 4368)))]"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_user_recommendations_rating_title_and_count_RDD.take(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fake_user_recommendations_rating_title_and_count_RDD = \\\n",
+    "    full_user_recommendations_rating_title_and_count_RDD.map(lambda r: (r[1][0][1], r[1][0][0], r[1][1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Munchies', 1.8009097307422466, (2.7088607594936707, 158)),\n",
+       " ('Joseph: King of Dreams', 2.2561160426653326, (3.7247107683180065, 3371)),\n",
+       " ('Tales of the Kama Sutra 2: Monsoon',\n",
+       "  1.5729453846687824,\n",
+       "  (1.8241042345276872, 307)),\n",
+       " ('Existenz', 3.2338604060818046, (3.052781253554772, 8791)),\n",
+       " ('The Candidate', 2.599180185501897, (3.5441849816849818, 4368))]"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake_user_recommendations_rating_title_and_count_RDD.take(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Take the top recommendations with more than a number of reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genererate_top_n_recommendations(rdd, top_n=5, review_threshold = 20):\n",
+    "    \"\"\"\n",
+    "    Generates the top recommendations for a user.\n",
+    "    \n",
+    "    Input: \n",
+    "        rdd -> The user rdd\n",
+    "        top_n -> The number of topsuggestions to present\n",
+    "        review_threshold -> The minimum number of reviews required to generate the new reviews.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return rdd.filter(lambda elem: elem[2][1]>=review_threshold).takeOrdered(top_n, key=lambda x: -x[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_movies = genererate_top_n_recommendations(fake_user_recommendations_rating_title_and_count_RDD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------\n",
+      "Kodocha, Rate 4.354166666666667 from 48 users, with predicted review: 4.290520484906485\n",
+      "-----------\n",
+      "Koi Kaze, Rate 3.586206896551724 from 87 users, with predicted review: 4.186886844066234\n",
+      "-----------\n",
+      "Buffy the Vampire Slayer: Season 3, Rate 4.3007028537556105 from 11809 users, with predicted review: 4.0812930562896295\n",
+      "-----------\n",
+      "Interstella 5555 (Daft Punk), Rate 3.8034682080924855 from 173 users, with predicted review: 4.047506822383514\n",
+      "-----------\n",
+      "Buffy the Vampire Slayer: Season 4, Rate 4.335956529885704 from 10674 users, with predicted review: 4.042377984237833\n"
+     ]
+    }
+   ],
+   "source": [
+    "for elem in top_movies:\n",
+    "    \n",
+    "    print('-----------')\n",
+    "    print(f'{elem[0]}, Rate {elem[2][0]} from {elem[2][1]} users, with predicted review: {elem[1]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
